# platform-lp-rs

./: Cargo.toml  README.md
src/: architecture.rs  lib.rs  partialplatform.rs  platform.rs  serialization.rs
tests/: test.rs
