[package]
name = "platform-lp"
version = "0.2.2"
authors = ["snsvrno <snsvrno@tuta.io>"]

license = "MIT"
description = "a library for getting the user platform, and checking against other platforms"
repository = "https://github.com/snsvrno/platform-lp-rs"
readme = "README.md"
keywords = ["platform","os"]
categories = ["os"]

exclude = [
    "/tests"
]

[dependencies]
serde = "1.0"

[dev-dependencies]
serde_test = "1.0"